--- a/src/content/once-ui/quick-start.mdx
+++ b/src/content/once-ui/quick-start.mdx
@@ -26,6 +26,24 @@ Create a new Once UI app with our CLI tool. It will clone the latest version and
   }
 ]} />
 
+Alternatively, you can clone the repository and install dependencies manually:
+
+<CodeBlock compact marginBottom="16" codes={[
+  {
+    code: "git clone https://github.com/once-ui-system/nextjs-starter.git",
+    language: "bash"
+  }
+]} />
+
+Install dependencies:
+
+<CodeBlock compact marginBottom="16" codes={[
+  {
+    code: "cd my-app && npm install",
+    language: "bash"
+  }
+]} />
+
 Start the local development server:
 
 <CodeBlock compact marginBottom="16" codes={[
@@ -37,7 +55,9 @@ Start the local development server:
 
 ## Structure
 
-<CodeBlock compact marginBottom="16" codes={[
+We recommend using Once UI as a self-contained entity in your mono-repo structure. Alternatively, if you're building a larger ecosystem, you can serve your own Once UI package through npm. We're planning to distribute Once UI as a package with the upcoming 1.0 version.
+
+<CodeBlock compact marginTop="16" codes={[
   {
     code:
 `.
