--- a/src/content/once-ui/form-controls/select.mdx
+++ b/src/content/once-ui/form-controls/select.mdx
@@ -3,7 +3,7 @@ title: "Select"
 summary: "Select provides a dropdown menu for choosing from a list of options with optional search functionality."
 updatedAt: "2025-05-12"
 navLabel: "Select"
-navIcon: "components"
+navIcon: "switch"
 ---
 
 The `Select` component offers a dropdown menu for selecting from a list of options. It's built on top of the `DropdownWrapper` and `Input` components, providing a consistent user experience with other form controls.
