--- a/src/content/once-ui/modules/megaMenu.mdx
+++ b/src/content/once-ui/modules/megaMenu.mdx
@@ -3,7 +3,7 @@ title: "MegaMenu"
 summary: "MegaMenu displays a top-level navigation bar with expandable dropdowns for organized access to grouped links. It supports dynamic sizing and contextual visibility."
 updatedAt: "2025-05-09"
 navLabel: "MegaMenu"
-navIcon: "components"
+navIcon: "modules"
 ---
 
 Use `MegaMenu` for complex navigational layouts where primary sections include sub-links, descriptions, and icons. Ideal for app headers and multi-level SaaS interfaces.
