--- a/src/content/once-ui/components/background.mdx
+++ b/src/content/once-ui/components/background.mdx
@@ -267,7 +267,7 @@ Add diagonal or straight lines to your backgrounds with customizable angle, thic
   ]}
 />
 
-## Combining effects
+## Stacking
 
 Combine multiple background effects to create unique and visually interesting backgrounds.
 
@@ -327,7 +327,7 @@ Combine multiple background effects to create unique and visually interesting ba
   }}
 />`,
       language: "tsx",
-      label: "Combined Effects"
+      label: "Stacking"
     }
   ]}
 />
