--- a/src/content/once-ui/data/setup.mdx
+++ b/src/content/once-ui/data/setup.mdx
@@ -4,6 +4,8 @@ summary: "Everything you need to know about the setup, shared props and common c
 updatedAt: "2025-05-14"
 navLabel: "Setup"
 navIcon: "learn"
+navTag: "New"
+navTagVariant: "cyan"
 ---
 
 The Once UI data-viz module is a collection of opinionated chart solutions built on top of [Recharts](https://recharts.org/) and [Date-fns](https://date-fns.org/). It was designed to help you create beautiful and interactive charts with minimal code.
