--- a/src/content/once-ui/form-controls/select.mdx
+++ b/src/content/once-ui/form-controls/select.mdx
@@ -156,7 +156,7 @@ Customize the message shown when no options match the search query.
     ["value", "string", ""],
     ["emptyState", "ReactNode", "No results"],
     ["onSelect", "(value: string) => void"],
-    ["floatingPlacement", "Placement"],
+    ["placement", "Placement"],
     ["searchable", "boolean", "false"],
     ["minHeight", "SpacingToken"],
     ["minWidth", "SpacingToken"],
