--- a/src/content/once-ui/components/userMenu.mdx
+++ b/src/content/once-ui/components/userMenu.mdx
@@ -35,8 +35,8 @@ The `UserMenu` component renders a user avatar and name, and opens a dropdown fo
     avatarProps={{ src: "/images/avatar.jpg" }}
     dropdown={
       <Column gap="4" padding="4" minWidth={10}>
-        <ClientOption fillWidth hasPrefix={<Icon size="xs" onBackground="neutral-weak" name="settings" />} label="Settings" />
-        <ClientOption fillWidth hasPrefix={<Icon size="xs" onBackground="neutral-weak" name="logout" />} label="Log out" />
+        <Option fillWidth hasPrefix={<Icon size="xs" onBackground="neutral-weak" name="settings" />} label="Settings" />
+        <Option fillWidth hasPrefix={<Icon size="xs" onBackground="neutral-weak" name="logout" />} label="Log out" />
       </Column>
     }
 />`,
