--- a/src/content/once-ui/components/line.mdx
+++ b/src/content/once-ui/components/line.mdx
@@ -22,9 +22,11 @@ The Line component is used to create horizontal or vertical divider lines with c
   codes={[
     {
       code:
-`<Line />
-<Text>Content between lines</Text>
-<Line />`,
+`<Column gap="24" fillWidth horizontal="center">
+    <Line />
+    <Text>Content between lines</Text>
+    <Line />
+</Column>`,
       language: "tsx",
       label: "Line"
     }
