--- a/src/content/once-ui/form-controls/input.mdx
+++ b/src/content/once-ui/form-controls/input.mdx
@@ -168,7 +168,7 @@ const handleClear = () => {
 
 ## Placeholder
 
-Use the `placeholder` prop to use placeholder instead of label. The placeholder disappears when the input has value. Never use placeholder and label at the same time.
+Use the `placeholder` prop to use placeholder instead of label. The placeholder disappears when the input has value.
 
 <CodeBlock
   marginTop="16"
