--- a/src/content/once-ui/effects/letterFx.mdx
+++ b/src/content/once-ui/effects/letterFx.mdx
@@ -13,7 +13,7 @@ LetterFx animates text character-by-character using randomized symbols that reso
   marginTop="16"
   marginBottom="24"
   preview={
-    <span style={{ fontFamily: "var(--font-family-code)" }}>
+    <span style={{ fontFamily: "var(--font-code)" }}>
       <LetterFx
         speed="medium"
         trigger="instant"
