--- a/src/content/magic-portfolio/seo.mdx
+++ b/src/content/magic-portfolio/seo.mdx
@@ -16,7 +16,9 @@ Magic Portfolio automatically generates schema tags for your pages based on the 
 
 ## Open Graph image
 
-Social sharing images (open-graph and twitter) are automatically generated with `next/og`.
+You can change the social sharing image (open-graph and twitter) for the home page by replacing the `public/images/og/home.jpg` file.
+
+For all other routes, sharing images are automatically generated with `next/og`.
 
 <Feedback
     icon
