update custom colors docs

--- a/src/content/magic-portfolio/seo.mdx
+++ b/src/content/magic-portfolio/seo.mdx
@@ -37,7 +37,7 @@ For all other routes, sharing images are automatically generated with `next/og`.
 `export async function generateMetadata() {
   const title = home.title;
   const description = home.description;
-  const ogImage = \`/api/og/generate-og?title=\${encodeURIComponent(title)}\`;
+  const ogImage = \`/api/og/generate-og/generatecodeURIComponent(title)}\`;
    ...
 };`,
         language: "tsx",
