--- a/src/content/once-ui/form-controls/select.mdx
+++ b/src/content/once-ui/form-controls/select.mdx
@@ -13,18 +13,17 @@ The `Select` component offers a dropdown menu for selecting from a list of optio
     marginTop="16"
     marginBottom="24"
     preview={
-        <Row fillWidth height={12} vertical="start">
-            <Select
-                id="basic-select"
-                label="Choose a country"
-                options={[
-                    { label: "United States", value: "us" },
-                    { label: "Canada", value: "ca" },
-                    { label: "United Kingdom", value: "uk" },
-                    { label: "Australia", value: "au" }
-                ]}
-            />
-        </Row>
+        <Select
+            fillWidth
+            id="basic-select"
+            label="Choose a country"
+            options={[
+                { label: "United States", value: "us" },
+                { label: "Canada", value: "ca" },
+                { label: "United Kingdom", value: "uk" },
+                { label: "Australia", value: "au" }
+            ]}
+        />
     }
     codes={[
         {
@@ -57,23 +56,22 @@ Enable search functionality to filter options in large lists.
     marginTop="16"
     marginBottom="24"
     preview={
-        <Row fillWidth height={12} vertical="start">
-            <Select
-                id="searchable-select"
-                label="Choose a country"
-                searchable
-                options={[
-                    { label: "United States", value: "us" },
-                    { label: "Canada", value: "ca" },
-                    { label: "United Kingdom", value: "uk" },
-                    { label: "Australia", value: "au" },
-                    { label: "Germany", value: "de" },
-                    { label: "France", value: "fr" },
-                    { label: "Japan", value: "jp" },
-                    { label: "Brazil", value: "br" }
-                ]}
-            />
-        </Row>
+        <Select
+            fillWidth
+            id="searchable-select"
+            label="Choose a country"
+            searchable
+            options={[
+                { label: "United States", value: "us" },
+                { label: "Canada", value: "ca" },
+                { label: "United Kingdom", value: "uk" },
+                { label: "Australia", value: "au" },
+                { label: "Germany", value: "de" },
+                { label: "France", value: "fr" },
+                { label: "Japan", value: "jp" },
+                { label: "Brazil", value: "br" }
+            ]}
+        />
     }
     codes={[
         {
@@ -111,24 +109,23 @@ Customize the message shown when no options match the search query.
     marginTop="16"
     marginBottom="24"
     preview={
-        <Row fillWidth height={12} vertical="start">
-            <Select
-                id="empty-state-select"
-                label="Choose a country"
-                searchable
-                emptyState={
-                    <Text onBackground="neutral-weak">
-                        No matching countries found
-                    </Text>
-                }
-                options={[
-                    { label: "United States", value: "us" },
-                    { label: "Canada", value: "ca" },
-                    { label: "United Kingdom", value: "uk" },
-                    { label: "Australia", value: "au" }
-                ]}
-            />
-        </Row>
+        <Select
+            fillWidth
+            id="empty-state-select"
+            label="Choose a country"
+            searchable
+            emptyState={
+                <Text onBackground="neutral-weak">
+                    No matching countries found
+                </Text>
+            }
+            options={[
+                { label: "United States", value: "us" },
+                { label: "Canada", value: "ca" },
+                { label: "United Kingdom", value: "uk" },
+                { label: "Australia", value: "au" }
+            ]}
+        />
     }
     codes={[
         {
