update providers code

--- a/src/content/once-ui/contexts/themeProvider.mdx
+++ b/src/content/once-ui/contexts/themeProvider.mdx
@@ -218,34 +218,37 @@ useEffect(() => {
 
 Inject the following script into the `<head>` to set the initial theme before hydration in `layout.tsx`. It will prevent flash of unstyled content (FOUC).
 
-<CodeBlock
-  marginTop="16"
-  marginBottom="24"
-  codeHeight={24}
-  lineNumbers
-  codes={[
-    {
-      code:
-`<head>
-    <script
-      dangerouslySetInnerHTML={{
-        __html: '
+```tsx
+<head>
+  <script
+    id="theme-init"
+    dangerouslySetInnerHTML={{
+      __html: `
           (function() {
             try {
               const root = document.documentElement;
               
-              const defaultTheme = 'system';
-              root.setAttribute('data-neutral', 'gray');
-              root.setAttribute('data-brand', 'blue');
-              root.setAttribute('data-accent', 'indigo');
-              root.setAttribute('data-solid', 'contrast');
-              root.setAttribute('data-solid-style', 'flat');
-              root.setAttribute('data-border', 'playful');
-              root.setAttribute('data-surface', 'filled');
-              root.setAttribute('data-transition', 'all');
-              root.setAttribute('data-scaling', '100');
-              root.setAttribute('data-viz-style', 'categorical');
+              // Set defaults from config
+              const config = ${JSON.stringify({
+                theme: style.theme,
+                brand: style.brand,
+                accent: style.accent,
+                neutral: style.neutral,
+                solid: style.solid,
+                'solid-style': style.solidStyle,
+                border: style.border,
+                surface: style.surface,
+                transition: style.transition,
+                scaling: style.scaling,
+                'viz-style': dataStyle.variant,
+              })};
               
+              // Apply default values
+              Object.entries(config).forEach(([key, value]) => {
+                root.setAttribute('data-' + key, value);
+              });
+              
+              // Resolve theme
               const resolveTheme = (themeValue) => {
                 if (!themeValue || themeValue === 'system') {
                   return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
@@ -253,11 +256,14 @@ Inject the following script into the `<head>` to set the initial theme before hy
                 return themeValue;
               };
               
-              const theme = localStorage.getItem('data-theme');
-              const resolvedTheme = resolveTheme(theme);
+              // Apply saved theme or use config default
+              const savedTheme = localStorage.getItem('data-theme');
+              // Only override with system preference if explicitly set to 'system'
+              const resolvedTheme = savedTheme ? resolveTheme(savedTheme) : config.theme === 'system' ? resolveTheme(window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light') : config.theme;
               root.setAttribute('data-theme', resolvedTheme);
               
-              const styleKeys = ['neutral', 'brand', 'accent', 'solid', 'solid-style', 'viz-style', 'border', 'surface', 'transition', 'scaling'];
+              // Apply any saved style overrides
+              const styleKeys = Object.keys(config);
               styleKeys.forEach(key => {
                 const value = localStorage.getItem('data-' + key);
                 if (value) {
@@ -265,18 +271,15 @@ Inject the following script into the `<head>` to set the initial theme before hy
                 }
               });
             } catch (e) {
+              console.error('Failed to initialize theme:', e);
               document.documentElement.setAttribute('data-theme', 'dark');
             }
           })();
-        ',
+        `,
       }}
     />
-</head>`,
-      language: "js",
-      label: "Hydration script"
-    }
-  ]}
-/>
+</head>
+```
 
 ## Style your app
 
